# tarasov-auth

./: .env.example  .gitignore  Dockerfile.dev  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: auth.py
app/core/: config.py  dependencies.py  security.py
app/db/: database.py
app/models/: user.py
app/schemas/: user.py
